manifests/nats-subscriber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-subscriber
  namespace: nats-system
  labels:
    app: nats-subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-subscriber
  template:
    metadata:
      labels:
        app: nats-subscriber
      annotations:
        linkerd.io/inject: enabled
        # config.linkerd.io/skip-outbound-ports: "4222"
    spec:
      containers:
      - name: subscriber
        image: natsio/nats-box:latest
        command:
        - "/bin/sh"
        - "-c"
        - |
          [...]
        volumeMounts:
        - name: client-tls
          mountPath: /etc/nats/certs/client
          readOnly: true
        - name: ca-cert
          mountPath: /etc/nats/certs/ca
          readOnly: true
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
      volumes:
      - name: client-tls
        secret:
          secretName: nats-subscriber-client-tls
      - name: ca-cert
        secret:
          secretName: nats-ca
